--- a/web/index.html
+++ b/web/index.html
@@ -19,8 +19,10 @@
 		<div class="app-page" data-page="home">
 			<div class="app-topbar">
 				<div class="app-title">Sochi 14 Medal Standings</div>
+				<div class="app-button right" id="refresh"><div class="refresh"></div></div>
 			</div>
 			<div class="app-content">
+				<div id="loader">Loading...</div>
 				<table>
 					<thead>
 						<tr>
