Updated loading message

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 				<div class="app-button right" id="refresh"><div class="refresh"></div></div>
 			</div>
 			<div class="app-content">
-				<div id="loader">Loading...</div>
+				<div id="loader">Refreshing standings...</div>
 				<table>
 					<thead>
 						<tr>
