Little changes. New logo, kik canonical, slight ui mods

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,8 @@
 		<meta name="description" content="Quickly check the medal standings for the Sochi 2014 Olympic Games!">
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="kik-prefer" content="true">
-		<link rel="kik-icon" href="/img/icon.png">
+		<link rel="kik-icon" href="/img/icon.png?v=2">
+		<link rel="canonical" href="http://kik-sochi14.josephmuia.ca/">
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="http://cdn.kik.com/app/2-DEV/app.min.css">
@@ -18,11 +19,11 @@
 
 		<div class="app-page" data-page="home">
 			<div class="app-topbar">
-				<div class="app-title">Sochi 14 Medal Standings</div>
+				<div class="app-title">Sochi '14 Medal Standings</div>
 				<div class="app-button right" id="refresh"><div class="refresh"></div></div>
 			</div>
 			<div class="app-content">
-				<div id="loader">Refreshing standings...</div>
+				<div id="loader">refreshing standings...</div>
 				<table>
 					<thead>
 						<tr>
