commit different versions of cleanup of ad.js

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/css/styles.css">
 
 		<!-- Ad Script -->
-		<script src='http://kik-madserve.herokuapp.com/ad.js'></script> <!--This goes in your HEAD Section -->
+		<script src='/js/ad.min.js'></script> <!--This goes in your HEAD Section -->
 
 	</head>
 
